feat: improve additional file parse,new add config module